<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Русские пароли</string>
    <string name="clipboard_title">Пароль</string>
    <string name="message_copied">Скопировано в буфер</string>
    <string name="quality_hint">(Сила пароля)</string>
    <string name="btn_generate">Генерировать</string>
    <string name="upper_case">Заглавные</string>
    <string name="digits">Цифры</string>
    <string name="symbols">Спецсимволы</string>
    <string name="help_text">"Здесь вы можете посмотреть свой пароль, созданный по методу «русское слово в английской раскладке"</string>
    <string name="et_hint">(русский пароль)</string>
    <string name="password_generate">Сгенерируйте новый пароль ему на замену</string>
    <string name="password_length_format">Длина: 8 + %1$d %2$s = %3$d %4$s</string>
    <string name="password_quantity">Сила этого пароля:</string>

    <string-array name="english">
        <item>q</item>
        <item>w</item>
        <item>e</item>
        <item>r</item>
        <item>t</item>
        <item>y</item>
        <item>u</item>
        <item>i</item>
        <item>o</item>
        <item>p</item>
        <item>[</item>
        <item>]</item>
        <item>a</item>
        <item>s</item>
        <item>d</item>
        <item>f</item>
        <item>g</item>
        <item>h</item>
        <item>j</item>
        <item>k</item>
        <item>l</item>
        <item>;</item>
        <item>\'</item>
        <item>z</item>
        <item>x</item>
        <item>c</item>
        <item>v</item>
        <item>b</item>
        <item>n</item>
        <item>m</item>
        <item>,</item>
        <item>.</item>
    </string-array>

    <string-array name="russians">
        <item>й</item>
        <item>ц</item>
        <item>у</item>
        <item>к</item>
        <item>е</item>
        <item>н</item>
        <item>г</item>
        <item>ш</item>
        <item>щ</item>
        <item>з</item>
        <item>х</item>
        <item>ъ</item>
        <item>ф</item>
        <item>ы</item>
        <item>в</item>
        <item>а</item>
        <item>п</item>
        <item>р</item>
        <item>о</item>
        <item>л</item>
        <item>д</item>
        <item>ж</item>
        <item>э</item>
        <item>я</item>
        <item>ч</item>
        <item>с</item>
        <item>м</item>
        <item>и</item>
        <item>т</item>
        <item>ь</item>
        <item>б</item>
        <item>ю</item>
    </string-array>

    <string-array name="quantities">
        <item>@string/quality_hint</item>
        <item>Ужасный</item>
        <item>Очень плохой</item>
        <item>Плохой</item>
        <item>Слабый</item>
        <item>Слабоватый</item>
        <item>Нормальный</item>
        <item>Лучше среднего</item>
        <item>Хороший</item>
        <item>Очень хороший</item>
        <item>Отличный</item>
    </string-array>
</resources>