<?xml version="1.0" encoding="UTF-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_text"
            android:textAppearance="@style/InfoTextAppearance" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/result_margin"
            android:layout_marginBottom="@dimen/result_margin"
            android:background="@drawable/result_background"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_result"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/result_margin"
                android:layout_marginBottom="@dimen/result_margin"
                android:layout_weight="1"
                android:textAppearance="@style/ResultTextAppearance" />

            <ImageButton
                android:id="@+id/btn_copy_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_padding"
                android:src="@drawable/ic_content_copy_white_24dp"
                android:theme="@style/ButtonTheme" />

        </LinearLayout>

        <EditText
            android:id="@+id/source_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_hint" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/rl_quantity_margin">

            <TextView
                android:id="@+id/password_quality_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/image_quality_indicator" />

            <ImageView
                android:id="@+id/image_quality_indicator"
                android:layout_width="@dimen/indicator_width"
                android:layout_height="@dimen/indicator_height"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/quality_indicator" />

        </RelativeLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/checkbox_margin"
            android:text="@string/password_generate"
            android:textAppearance="@style/InfoTextAppearance" />

        <CheckBox
            android:id="@+id/check_caps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/checkbox_margin"
            android:checked="true"
            android:text="@string/upper_case"
            android:textAppearance="@style/InfoTextAppearance"
            android:textColor="@color/color_black" />

        <CheckBox
            android:id="@+id/check_digits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/checkbox_margin"
            android:checked="true"
            android:text="@string/digits"
            android:textAppearance="@style/InfoTextAppearance"
            android:textColor="@color/color_black" />

        <CheckBox
            android:id="@+id/check_symbols"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/checkbox_margin"
            android:layout_marginBottom="@dimen/checkbox_margin"
            android:text="@string/symbols"
            android:textAppearance="@style/InfoTextAppearance"
            android:textColor="@color/color_black" />

        <SeekBar
            android:id="@+id/seek_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10" />

        <TextView
            android:id="@+id/text_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_padding"
            android:background="@drawable/result_background"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_generate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/result_margin"
                android:layout_marginBottom="@dimen/result_margin"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textAppearance="@style/ResultTextAppearance" />

            <ImageButton

                android:id="@+id/btn_copy_generate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_padding"
                android:src="@drawable/ic_content_copy_white_24dp"
                android:theme="@style/ButtonTheme" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_generate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_generate"
            android:theme="@style/ButtonTheme" />

    </LinearLayout>

</ScrollView>